--- a/xorg.conf.d/60-personal.conf
+++ b/xorg.conf.d/60-personal.conf
@@ -1,1 +1,52 @@
-/etc/X11/xorg.conf.d/60-personal.conf
+Section "Module"
+	Load "synaptics"
+    Load "glx"
+EndSection
+
+Section "InputClass"
+    Identifier "Touchpad SoftArea"
+	MatchDriver "synaptics"
+	Option "SoftButtonAreas" "50% 0 82% 0 0 0 0 0"
+EndSection
+
+Section "InputClass"
+ Identifier      "Synaptics Touchpad"
+ Driver          "synaptics"
+ MatchIsTouchpad "on"
+ MatchDevicePath "/dev/input/event*"
+ Option          "SendCoreEvents"        "true"
+ Option          "SHMConfig"             "on"
+ Option          "Protocol" "auto-dev"
+ Option          "HorizEdgeScroll"       "0"
+ Option          "VertEdgeScroll"        "0"
+ Option          "VertTwoFingerScroll"   "1"
+ Option          "HorizTwoFingerScroll"  "1" 
+ Option          "HorizScrollDelta"      "5"
+ Option          "VertScrollDelta"       "5"
+ Option          "PressureMotionMinZ"    "12"
+ Option          "FingerLow"             "20"
+ Option          "FingerHigh"            "60"
+ Option          "FingerPress"           "130"
+ #Option          "LeftEdge"              "70"
+ #Option          "RightEdge"             "1120"
+ #Option          "TopEdge"               "50"
+ #Option          "BottomEdge"            "750"
+ Option          "MinSpeed"              "0.5" 
+ Option          "MaxSpeed"              "0.5" 
+ Option          "AccelFactor"           "0.00015"
+ Option          "MaxTapMove"            "100"
+ Option          "MaxTapTime"            "100"
+ Option          "MaxDoubleTapTime"      "200"
+ Option          "TapButton2"            "3"
+ Option          "TapButton3"            "2"
+ #Option         "TapButton1"            "0"
+ Option          "RTCornerButton"        "0"
+ Option          "RBCornerButton"        "3"
+ Option          "LTCornerButton"        "2"
+ Option          "LBCornerButton"        "0"
+
+ # Palm Detection: Useful while typing
+ Option          "PalmDetect"            "on"
+ Option          "PalmMinWidth"          "10"
+ Option          "PalmMinZ"              "200"
+EndSection
